# forStudent

./: .gitignore
InheritanceExample/: .gitignore  InheritanceExample.sln
InheritanceExample/InheritanceExample/: InheritanceExample.cpp  InheritanceExample.vcxproj  InheritanceExample.vcxproj.filters  Parallelogram.cpp  Parallelogram.h  Rhombus.cpp  Rhombus.h  Square.cpp  Square.h
Lab4_s2/Lab4/: CMakeLists.txt  main.cpp  vector2.cpp  vector2.h
